tmux: add function to calculate TERM manually

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -14,7 +14,8 @@ set-window-option -g mode-style fg=black,bg=${HOST_COLOUR}
 # moar scollback
 set -g history-limit 10000
 
-# .zshrc will choose a TERM based on the tmux environment variable TERM
+# Propagate the "real terminal" that tmux operating inside of.
+# updtmuxterm will calculate and set an apprpriate TERM from this.
 set -g -a update-environment ' TERM'
 
 # use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
