tmux: C-l goes straight to the terminal, prefixed also clears history

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -27,7 +27,7 @@ bind-key C-a send-prefix
 bind-key a copy-mode
 
 # clear terminal and scrollback
-bind-key -n C-l send-keys -R C-l \; clear-history
+bind-key C-l send-keys -R C-l \; clear-history
 
 # vi copypasta mode
 set-window-option -g mode-keys vi
