--- a/home/.config/alacritty/alacritty.yml
+++ b/home/.config/alacritty/alacritty.yml
@@ -104,7 +104,7 @@ scrolling:
 #tabspaces: 8
 
 # Font configuration
-font:
+#font:
   # Normal (roman) font face
   #normal:
     # Font family
@@ -119,7 +119,7 @@ font:
     #style: Regular
 
   # Bold font face
-  bold:
+  #bold:
     # Font family
     #
     # If the bold family is not specified, it will fall back to the
@@ -127,7 +127,7 @@ font:
     #family: monospace
 
     # The `style` can be specified to pick a specific face.
-    style: Bold Italic
+    #style: Bold
 
   # Italic font face
   #italic:
@@ -712,9 +712,19 @@ schemes:
       foreground: '#d8d8d8'
 
     # Colors the cursor will use if `custom_cursor_colors` is true
+    #cursor:
+      #text: '#d8d8d8'
+      #cursor: '#d8d8d8'
+
+    # copy of primary
     cursor:
-      text: '#d8d8d8'
-      cursor: '#d8d8d8'
+      text: '#181818'
+      background: '#d8d8d8'
+
+    # copy of primary
+    selection:
+      text: '#181818'
+      background: '#d8d8d8'
 
     # Normal colors
     normal:
@@ -2239,6 +2249,7 @@ schemes:
 
 # appealing
 #colors: *ayudark
+#colors: *base16defaultdark
 colors: *bloodmoon
 #colors: *campbell
 #colors: *hyper
@@ -2260,7 +2271,6 @@ colors: *bloodmoon
 # eye bleach
 #colors: *afterglow
 #colors: *argonaut
-#colors: *base16defaultdark
 #colors: *kdebreeze
 #colors: *cobalt2
 #colors: *darkside
