tmux: optimistic default-terminal to enable all features such as italic

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -18,6 +18,10 @@ set -g history-limit 10000
 # updtmuxterm will calculate and set an apprpriate TERM from this.
 set -g -a update-environment ' TERM'
 
+# This optimistic default may be overridden by updtmuxterm. We need this during
+# session initialisation so that it gains features e.g. italic fonts.
+set -g default-terminal "tmux-256color"
+
 # use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
 unbind-key C-b
 set -g prefix C-a
