--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -22,6 +22,9 @@ set -g -a update-environment ' TERM'
 # session initialisation so that it gains features e.g. italic fonts.
 set -g default-terminal "tmux-256color"
 
+# recommended for vim-gitgutter
+set -g focus-events on
+
 # use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
 unbind-key C-b
 set -g prefix C-a
