tmux: send a reset along with C-l to the unprefixet C-l

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -33,6 +33,9 @@ bind-key C-a send-prefix
 # enter copy mode
 bind-key a copy-mode
 
+# clear terminal
+bind-key -n C-l send-keys -R C-l
+
 # clear terminal and scrollback
 bind-key C-l send-keys -R C-l \; clear-history
 
@@ -54,7 +57,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-no-clear "xsel --input --clipboard"
 
 # cwd to X selection; xsel will run in the background until another process wants to put to X sel
-bind-key -T prefix u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
+bind-key -T prefix C-u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
 
 # spawn alacritty at cwd; unset TMUX so that .zshrc will exec it
-bind-key -T prefix e run-shell -b "TMUX= /bin/zsh -c \"alacritty --working-directory \\\"#{pane_current_path}\\\" &\""
+bind-key -T prefix C-e run-shell -b "TMUX= /bin/zsh -c \"alacritty --working-directory \\\"#{pane_current_path}\\\" &\""
