temporary caps->super for soarer's model F, until I get around to programming it

--- a/home/.config/X11/xorg.conf.d/90-keyboard.conf
+++ b/home/.config/X11/xorg.conf.d/90-keyboard.conf
@@ -35,3 +35,10 @@ Section "InputClass"
 	MatchProduct "Heng Yu Technology K108D"
 	Option "XkbOptions" "caps:escape,altwin:swap_alt_win"
 EndSection
+
+Section "InputClass"
+	Identifier "Soarer Soarer's Keyboard Converter Keyboard"
+	MatchIsKeyboard "on"
+	MatchProduct "Soarer Soarer's Keyboard Converter Keyboard"
+	Option "XkbOptions" "caps:super"
+EndSection
