tmux: use escape-time 0 for better response time

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -25,6 +25,9 @@ set -g default-terminal "tmux-256color"
 # recommended for vim-gitgutter
 set -g focus-events on
 
+# safe to set to zero unless operating over a slow network
+set -s escape-time 0
+
 # use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
 unbind-key C-b
 set -g prefix C-a
