--- a/home/.config/alacritty/alacritty.yml
+++ b/home/.config/alacritty/alacritty.yml
@@ -2175,29 +2175,24 @@ schemes:
       background: '#000000'
       foreground: '#ffffff'
 
-    # copy of primary
-    cursor:
-      text: '#000000'
-      cursor: '#ffffff'
-
     # Normal colors
     normal:
       black:   '#000000'
       red:     '#cd0000'
       green:   '#00cd00'
       yellow:  '#cdcd00'
-      blue:    '#0000ee'
+      blue:    '#0000cd'
       magenta: '#cd00cd'
       cyan:    '#00cdcd'
       white:   '#e5e5e5'
 
     # Bright colors
     bright:
-      black:   '#7f7f7f'
+      black:   '#4d4d4d'
       red:     '#ff0000'
       green:   '#00ff00'
       yellow:  '#ffff00'
-      blue:    '#5c5cff'
+      blue:    '#0000ff'
       magenta: '#ff00ff'
       cyan:    '#00ffff'
       white:   '#ffffff'
