--- a/home/.config/alacritty/alacritty.yml
+++ b/home/.config/alacritty/alacritty.yml
@@ -11,8 +11,9 @@ env:
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
 
-  # TERM="alacritty" does not play well with vim: blanked sceen then nothing
-  TERM: xterm-256color
+  # TERM="alacritty" does not play well with vim: blanked sceen and nonresponsive until redraw
+  # st-256color has the terminfo that xterm-256color lacks, specifically tsl/fsl
+  TERM: st-256color
 
 #window:
   # Window dimensions (changes require restart)
