--- a/home/.config/alacritty/alacritty.yml
+++ b/home/.config/alacritty/alacritty.yml
@@ -747,6 +747,13 @@ schemes:
       background: '#10100E'
       foreground: '#C6C6C4'
 
+    # Cursor colors
+    cursor:
+      text:   '#10100E'
+      #text:   '#696969'
+      #cursor: '#C6C6C4'
+      cursor: '#FFFAFA'
+
     # Normal colors
     normal:
       black:   '#10100E'
