tmux: cancel copy mode after yank

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -57,10 +57,9 @@ unbind-key -T copy-mode-vi A # this was append-selection-and-cancel, purpose unk
 
 # use more vim like selection
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-no-clear "xsel --input --clipboard"
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
 
 # cwd to X selection; xsel will run in the background until another process wants to put to X sel
 bind-key -T prefix C-u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
 
-# spawn alacritty at cwd; unset TMUX so that .zshrc will exec it
-bind-key -T prefix C-e run-shell -b "TMUX= /bin/zsh -c \"alacritty --working-directory \\\"#{pane_current_path}\\\" &\""
