alacritty: move TERM override to .zshrc

--- a/home/.config/alacritty/alacritty.yml
+++ b/home/.config/alacritty/alacritty.yml
@@ -3,17 +3,14 @@
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-env:
+#env:
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-
-  # TERM="alacritty" does not play well with vim: blanked sceen and nonresponsive until redraw
-  # st-256color has the terminfo that xterm-256color lacks, specifically tsl/fsl
-  TERM: st-256color
+  #TERM: alacritty
 
 #window:
   # Window dimensions (changes require restart)
