tmux: finally sort out tmux clipboard integration

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -45,19 +45,18 @@ bind-key C-l send-keys -R C-l \; clear-history
 # vi copypasta mode
 set-window-option -g mode-keys vi
 
-# Disable tmux's built in X selection/clipboard handling, as it tries to use the terminal.
-# st sends to selection and clipboard, alacritty to clipboard if <= 766 characters, gnome-terminal/xterm/urxvt send nothing.
-set -g set-clipboard off
+# X clipboard integration fails over ~91kB in alacritty and st.
+# Pipe out to xsel wherever possible, but still enable the integration for ones we can't e.g. copy-line
+set -g set-clipboard external
 
-# override copy-selection-and-cancel bindings to send to X clipboard
+# override default copy-selection-and-cancel to pipe
 bind-key -T copy-mode-vi C-j               send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
 bind-key -T copy-mode-vi Enter             send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
-unbind-key -T copy-mode-vi A # this was append-selection-and-cancel, purpose unknown, with no pipe option
 
-# use more vim like selection
+# more vim like
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi Y send-keys -X copy-line
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
 
 # cwd to X selection; xsel will run in the background until another process wants to put to X sel
