tmux: restore accidentally deleted

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -62,3 +62,6 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --input --cli
 # cwd to X selection; xsel will run in the background until another process wants to put to X sel
 bind-key -T prefix C-u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
 
+# spawn alacritty at cwd; unset TMUX so that .zshrc will exec it
+bind-key -T prefix C-e run-shell -b "TMUX= /bin/zsh -c \"alacritty --working-directory \\\"#{pane_current_path}\\\" &\""
+
