--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -2,10 +2,13 @@
 	d = diff
 	dn = diff --name-only
 	ds = diff --staged
+	dsn = diff --staged --name-only
 	co = checkout
 	gup = smart-pull
 	gm = smart-merge
 	gl = smart-log
+	sh = show
+	shn = show --name-only
 	s = status
 [user]
 	name = Alexander Courtis
