alacritty: launcher script picking a random colour theme

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -16,7 +16,7 @@ set -g history-limit 10000
 
 # Propagate the "real terminal" that tmux operating inside of.
 # updtmuxterm will calculate and set an apprpriate TERM from this.
-set -g -a update-environment ' TERM'
+set -g -a update-environment ' TERM ALACRITTY_THEME'
 
 # This optimistic default may be overridden by updtmuxterm. We need this during
 # session initialisation so that it gains features e.g. italic fonts.
