--- a/home/.config/alacritty/alacritty.yml
+++ b/home/.config/alacritty/alacritty.yml
@@ -97,7 +97,7 @@ scrolling:
   #multiplier: 3
 
 # Font configuration
-#font:
+font:
   # Normal (roman) font face
   #normal:
     # Font family
@@ -149,9 +149,9 @@ scrolling:
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
-  #offset:
-  #  x: 0
-  #  y: 0
+  offset:
+    x: 0
+    y: 1
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the right,
@@ -2208,7 +2208,7 @@ schemes:
 #colors: *irblack
 #colors: *itermdefault
 #colors: *kdebreeze
-colors: *kitty
+#colors: *kitty
 #colors: *molokaidark
 #colors: *tango
 #colors: *tangoish
