zsh prompt and tmux decoration in dwm colours

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -8,8 +8,8 @@ set -g set-titles-string "#{pane_title}"
 set -g status off
 
 # host coloured status bar and window modes
-set -g status-style fg=black,bg=${HOST_COLOUR}
-set-window-option -g mode-style fg=black,bg=${HOST_COLOUR}
+set -g status-style fg=${DWM_SEL_FG},bg=${DWM_SEL_BG}
+set-window-option -g mode-style fg=${DWM_SEL_FG},bg=${DWM_SEL_BG}
 
 # moar scollback
 set -g history-limit 10000
