--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -8,8 +8,8 @@ set -g set-titles-string "#{pane_title}"
 set -g status off
 
 # host coloured status bar and window modes
-set -g status-style fg=${DWM_SEL_FG},bg=${DWM_SEL_BG}
-set-window-option -g mode-style fg=${DWM_SEL_FG},bg=${DWM_SEL_BG}
+set -g status-style "${C_T_N}"
+set-window-option -g mode-style "${C_T_N}"
 
 # moar scollback
 set -g history-limit 10000
