--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -7,9 +7,11 @@ set -g set-titles-string "#{pane_title}"
 # don't need a status bar
 set -g status off
 
-# host coloured status bar and window modes
+# dwm colouring
 set -g status-style "${C_T_N}"
 set-window-option -g mode-style "${C_T_N}"
+set -g message-style "${C_T_N}"
+set -g message-command-style "${C_T_N}"
 
 # moar scollback
 set -g history-limit 10000
