--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -10,6 +10,7 @@
 	sh = show
 	shn = show --name-only
 	s = status
+	st = status
 [user]
 	name = Alexander Courtis
 	email = acourtis@atlassian.com
