zsh: split .zshrc and tidy all the prompt business

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -8,10 +8,10 @@ set -g set-titles-string "#{pane_title}"
 set -g status off
 
 # dwm colouring
-set -g status-style "${C_T_N}"
-set-window-option -g mode-style "${C_T_N}"
-set -g message-style "${C_T_N}"
-set -g message-command-style "${C_T_N}"
+set -g status-style "${COL_TMUX_NORM}"
+set-window-option -g mode-style "${COL_TMUX_NORM}"
+set -g message-style "${COL_TMUX_NORM}"
+set -g message-command-style "${COL_TMUX_NORM}"
 
 # moar scollback
 set -g history-limit 10000
