--- a/config/alacritty/themes/base16defaultdark.yml
+++ b/config/alacritty/themes/base16defaultdark.yml
@@ -2,9 +2,10 @@ colors:
   primary:
     background: '#181818'
     foreground: '#d8d8d8'
-  cursor:
-    text: '#d8d8d8'
-    cursor: '#d8d8d8'
+  # AMC removed as you cannot see what the cursor is on
+  #cursor:
+    #text: '#d8d8d8'
+    #cursor: '#d8d8d8'
   normal:
     black:   '#181818'
     red:     '#ab4642'
