tmux: force? enable RGB for xterm-256color terminal

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ set -g -a update-environment ' TERM TERMINAL_THEME TERMINAL_BACKGROUND'
 # This optimistic default may be overridden by updtmuxterm. We need this during
 # session initialisation so that it gains features e.g. italic fonts.
 set -g default-terminal "tmux-256color"
-set -g -a terminal-overrides ",xterm-alacritty:RGB,alacritty:RGB"
+set -g -a terminal-overrides ",xterm-alacritty:RGB,alacritty:RGB,xterm-256color:RGB"
 
 # recommended for vim-gitgutter
 set -g focus-events on
