--- a/tmux.conf
+++ b/tmux.conf
@@ -20,10 +20,13 @@ set -g history-limit 10000
 # updtmuxterm will calculate and set an apprpriate TERM from this.
 set -g -a update-environment ' TERM TERMINAL_THEME TERMINAL_BACKGROUND'
 
-# This optimistic default may be overridden by updtmuxterm. We need this during
+# This optimistic default may be overridden by updatetmuxterm. We need this during
 # session initialisation so that it gains features e.g. italic fonts.
 set -g default-terminal "tmux-256color"
-set -g -a terminal-overrides ",xterm-alacritty:RGB,alacritty:RGB,xterm-256color:RGB"
+
+# Not all terminals correctly report 24 bit color capabilities. We can force it.
+# Force it for tmux-256color for embedded ssh/tmux sessions.
+set -g -a terminal-overrides ",tmux-256color:RGB,xterm-alacritty:RGB,alacritty:RGB,xterm-256color:RGB"
 
 # recommended for vim-gitgutter
 set -g focus-events on
