fix 24-bit script and clarify the use of terminal-overrides/features

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,9 +26,10 @@ set -g default-terminal "tmux-256color"
 
 # Not all terminals correctly report 24 bit color capabilities. We can force it.
 # Force it for tmux-256color for embedded ssh/tmux sessions.
-set -g -a terminal-overrides ",tmux-256color:RGB,xterm-alacritty:RGB,alacritty:RGB,xterm-256color:RGB"
+# TODO: specify as a feature in 3.2
+set -s -a terminal-overrides ",tmux-256color:RGB,xterm-256color:RGB,*alacritty*:RGB"
 
-# recommended for vim-gitgutter
+# needed for various vim plugins
 set -g focus-events on
 
 # safe to set to zero unless operating over a slow network
