mangohud: sensible defaults

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -6,31 +6,32 @@
 ################ PERFORMANCE #################
 
 ### Limit the application FPS
-# fps_limit=
+fps_limit=144
 
 ### VSYNC [0-3] 0 = adaptive; 1 = off; 2 = mailbox; 3 = on
-# vsync=
+vsync=2
 
 ### OpenGL VSYNC [0-N] 0 = off; >=1 = wait for N v-blanks, N > 1 acts as a fps limiter (fps = display refresh rate / N)
-# gl_vsync=
+# -1 == adaptive
+gl_vsync=-1
 
 ################### VISUAL ###################
 
 ### Display the current CPU information
-cpu_stats
-# cpu_temp
+cpu_stats=0
+#cpu_temp
 
 ### Display the current GPU information
 gpu_stats
-# gpu_temp
-# gpu_core_clock
-# gpu_mem_clock
+#gpu_temp
+gpu_core_clock
+gpu_mem_clock
 
 ### Display loaded MangoHud architecture
-# arch
+arch
 
 ### Display the frametime line graph
-frame_timing
+frame_timing=0
 
 ### Display the current system time
 # time
@@ -55,7 +56,7 @@ position=top-left
 
 ### Display system ram / vram usage
 # ram
-# vram
+vram
 
 ### Disable / hide the hud by deafult
 # no_display
@@ -101,13 +102,13 @@ background_alpha=0.5
 ################## INTERACTION #################
 
 ### Change toggle keybinds for the hud & logging
-toggle_hud=F12
-toggle_logging=F2
-reload_cfg=F4
+toggle_hud=F9
+toggle_logging=F10
+reload_cfg=F11
 
 ################## LOG #################
 
 ### Set amount of time in second that the logging will run for
 # log_duration
 ### Define name and location of the output file (Required for logging)
-# output_file
+output_file=/home/alex/mangohud_log_
