trim down mangohud

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -18,20 +18,20 @@ gl_vsync=-1
 ################### VISUAL ###################
 
 ### Display the current CPU information
-cpu_stats=0
+cpu_stats
 #cpu_temp
 
 ### Display the current GPU information
 gpu_stats
 #gpu_temp
-gpu_core_clock
-gpu_mem_clock
+#gpu_core_clock
+#gpu_mem_clock
 
 ### Display loaded MangoHud architecture
 arch
 
 ### Display the frametime line graph
-frame_timing=0
+frame_timing=1
 
 ### Display the current system time
 # time
@@ -56,7 +56,7 @@ position=top-left
 
 ### Display system ram / vram usage
 # ram
-vram
+# vram
 
 ### Disable / hide the hud by deafult
 # no_display
