--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,7 @@ set -g history-limit 10000
 
 # Propagate the "real terminal" that tmux operating inside of.
 # updtmuxterm will calculate and set an apprpriate TERM from this.
-set -g -a update-environment ' TERM TERMINAL_THEME TERMINAL_BACKGROUND'
+set -g -a update-environment ' TERM TERMINAL_THEME'
 
 # This optimistic default may be overridden by updatetmuxterm. We need this during
 # session initialisation so that it gains features e.g. italic fonts.
