--- a/tmux.conf
+++ b/tmux.conf
@@ -27,7 +27,7 @@ set -g default-terminal "tmux-256color"
 # Not all terminals correctly report 24 bit color capabilities. We can force it.
 # Force it for tmux-256color for embedded ssh/tmux sessions.
 # TODO: specify as a feature in 3.2
-set -s -a terminal-overrides ",tmux-256color:RGB,xterm-256color:RGB,*alacritty*:RGB"
+set -s -a terminal-overrides ",tmux-256color:RGB,xterm-256color:RGB,st-256color:RGB,*alacritty*:RGB"
 
 # needed for various vim plugins
 set -g focus-events on
