force nvidia X tearfree, move to gup accelerated chromium to take advantage

--- a/host-emperor/config/X11/xorg.conf.d/20-nvidia.conf
+++ b/host-emperor/config/X11/xorg.conf.d/20-nvidia.conf
@@ -1,6 +1,8 @@
 Section "Screen"
     Identifier     "nvidiaSpecific"
-    Option         "metamodes" "nvidia-auto-select +0+0 {AllowGSYNCCompatible=On}"
+    Option         "metamodes" "nvidia-auto-select +0+0 {ForceCompositionPipeline=On, ForceFullCompositionPipeline=On, AllowGSYNCCompatible=On}"
+    Option         "AllowIndirectGLXProtocol" "off"
+    Option         "TripleBuffer" "on"
 EndSection
 
 Section "ServerLayout"
