back to the custom built (not noisy) pasystray, without notification support

--- a/config/autostart/pasystray.desktop
+++ b/config/autostart/pasystray.desktop
@@ -3,9 +3,9 @@ Version=1.0
 Name=PulseAudio System Tray
 GenericName=
 Comment=An Applet for PulseAudio
-Exec=pasystray --volume-max=100 --volume-inc=5 --no-icon-tooltip --notify=all
+Exec=pasystray --volume-max=100 --volume-inc=5 --no-icon-tooltip
 Icon=pasystray
-StartupNotify=true
+StartupNotify=false
 Type=Application
 Categories=AudioVideo;Audio;
 Keywords=pulseaudio;tray;system tray;applet;volume;
