tmux: no search wrapping

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,6 +35,9 @@ set -g focus-events on
 # safe to set to zero unless operating over a slow network
 set -s escape-time 0
 
+# search
+set-window-option -g wrap-search off
+
 # use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
 unbind-key C-b
 set -g prefix C-a
