mangohud: hidden by default

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -59,7 +59,7 @@ position=top-left
 # vram
 
 ### Disable / hide the hud by deafult
-# no_display
+no_display
 
 ### Hud position offset
 # offset_x=
