tmux: notes on multilevel nested sessions

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,7 @@ set -s escape-time 0
 # search
 set-window-option -g wrap-search off
 
-# use screen ctrl-A prefix - remember invoke once for each level tmux we are deep
+# use screen ctrl-A prefix - can be invoked twice for a nested session, but not thrice
 unbind-key C-b
 set -g prefix C-a
 bind-key C-a send-prefix
