tmux: finally sort out prefix sending for nested sessions

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,10 +32,12 @@ set -s escape-time 0
 # search
 set-window-option -g wrap-search off
 
-# use screen ctrl-A prefix - can be invoked twice for a nested session, but not thrice
+# use screen ctrl-A prefix
 unbind-key C-b
 set -g prefix C-a
-bind-key C-a send-prefix
+
+# use C-o to prefix nested sessions, invoking multiple times as needed
+bind-key C-o send-prefix
 
 # enter copy mode
 bind-key a copy-mode
