--- a/tmux.conf
+++ b/tmux.conf
@@ -69,5 +69,5 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --input --cli
 bind-key -T prefix C-u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
 
 # spawn alacritty at cwd; unset TMUX so that .zshrc will exec it
-bind-key -T prefix C-e run-shell -b "TMUX= /bin/zsh -c \"alacritty --working-directory \\\"#{pane_current_path}\\\" &\""
+bind-key -T prefix C-e run-shell -b "TMUX= /bin/zsh -c \"cd \\\"#{pane_current_path}\\\" ; term &\""
 
