--- a/config/X11/xorg.conf.d/90-keyboard.conf
+++ b/config/X11/xorg.conf.d/90-keyboard.conf
@@ -5,12 +5,12 @@ Section "InputClass"
 	MatchIsKeyboard "on"
 	Option "XkbModel" "pc105"
 
-	Option "XKbLayout" "us"
-	Option "XkbVariant" "dvp"
-	Option "XkbOptions" "caps:escape"
+	#Option "XKbLayout" "us"
+	#Option "XkbVariant" "dvp"
+	#Option "XkbOptions" "caps:escape"
 	
 	# must specify multiple layouts in order to have multiple variants
-	# Option "XKbLayout" "us,us"
-	# Option "XkbVariant" "dvp,"
-	# Option "XkbOptions" "caps:escape,grp:shifts_toggle"
+	Option "XKbLayout" "us,us"
+	Option "XkbVariant" "dvp,"
+	Option "XkbOptions" "caps:escape,grp:shifts_toggle"
 EndSection
