xorg.conf.d: tidy

--- a/config/X11/xorg.conf.d/50-mouse.conf
+++ b/config/X11/xorg.conf.d/50-mouse.conf
@@ -1,7 +1,9 @@
 Section "InputClass"
-	Identifier "Mouses"
+	Identifier "mouse"
 	Driver "libinput"
 	MatchIsPointer "yes"
+
+	# man 4 libinput
 	Option "AccelProfile" "flat"
 	Option "AccelSpeed" "0"
 	Option "MiddleEmulation" "true"
