--- a/config/X11/xorg.conf.d/90-keyboard.conf
+++ b/config/X11/xorg.conf.d/90-keyboard.conf
@@ -1,13 +1,12 @@
-# look in Xorg.n.log to find the name that may be used for MatchProduct
-
 Section "InputClass"
-	Identifier "qwerty-dvp"
+	Identifier "keyboard"
 	MatchIsKeyboard "on"
 	Option "XkbModel" "pc105"
 
 	# must specify multiple layouts in order to have multiple variants
 	Option "XKbLayout" "us,us"
 	Option "XkbVariant" "dvp,"
+
 	# man xkeyboard-config
 	Option "XkbOptions" "caps:escape,grp:shift_caps_toggle"
 EndSection
