--- a/misc/interception/udevmon.d/ka2.yaml
+++ b/misc/interception/udevmon.d/ka2.yaml
@@ -1,4 +1,4 @@
-- JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/dfk.kinesis-advantage-2.yaml | uinput -d $DEVNODE"
+- JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/dfk.thumb-cluster.yaml | uinput -d $DEVNODE"
   DEVICE:
     NAME: "Kinesis Advantage2 Keyboard"
     EVENTS:
