--- a/misc/interception/udevmon.d/ergodox.yaml
+++ b/misc/interception/udevmon.d/ergodox.yaml
@@ -1,4 +1,4 @@
-- JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/dfk.thumb-cluster.yaml | uinput -d $DEVNODE"
+- JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dfk.thumb-cluster.yaml | uinput -d $DEVNODE"
   DEVICE:
     NAME: "ZSA Technology Labs ErgoDox EZ"
     EVENTS:
