intel gpu: triple buffering for less tearing under X

--- a/host-duke/config/X11/xorg.conf.d/20-intel.conf
+++ b/host-duke/config/X11/xorg.conf.d/20-intel.conf
@@ -5,6 +5,6 @@ Section "Device"
     # https://www.pcsuggest.com/fix-linux-screen-tearing/
     Option "TearFree" "true"
     #Option "AccelMethod" "uxa"
-    #Option "TripleBuffer" "true"
+    Option "TripleBuffer" "true"
 EndSection
 
