intel gpu: revert to settings that allow some steam opengl games to start properly

--- a/host-duke/config/X11/xorg.conf.d/20-intel.conf
+++ b/host-duke/config/X11/xorg.conf.d/20-intel.conf
@@ -4,7 +4,7 @@ Section "Device"
 
     # https://www.pcsuggest.com/fix-linux-screen-tearing/
     Option "TearFree" "true"
-    #Option "AccelMethod" "uxa"
-    Option "TripleBuffer" "true"
+    Option "AccelMethod" "uxa"
+    #Option "TripleBuffer" "true"
 EndSection
 
